# hector_localization

./: .gitignore  README.md  stack.xml
hector_localization/: CHANGELOG.rst  CMakeLists.txt  package.xml
hector_pose_estimation/: CHANGELOG.rst  CMakeLists.txt  hector_pose_estimation_nodelets.xml  hector_pose_estimation_plugins.xml  manifest.xml  package.xml
hector_pose_estimation/helpers/: plot.sh
hector_pose_estimation/include/hector_pose_estimation/: nodelet.h  pose_estimation_node.h
hector_pose_estimation/launch/: hector_pose_estimation.launch
hector_pose_estimation/rviz_cfg/: hector_pose_estimation.rviz
hector_pose_estimation/src/: CMakeLists.txt  main.cpp  nodelet.cpp  pose_estimation_node.cpp  pose_estimation_nodelet.cpp
hector_pose_estimation_core/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_pose_estimation_core/include/hector_pose_estimation/: bfl_conversions.h  collection.h  conversion.h  filter.h  global_reference.h  input.h  matrix.h  matrix_config.h.in  measurement.h  measurement.inl  measurement_model.h  measurement_update.h  model.h  parameters.h  pose_estimation.h  queue.h  state.h  state.inl  substate.h  system.h  system.inl  system_input.h  system_model.h  system_model.inl  types.h
hector_pose_estimation_core/include/hector_pose_estimation/Eigen/: MatrixBaseAddons.h  QuaternionBaseAddons.h
hector_pose_estimation_core/include/hector_pose_estimation/filter/: ekf.h  ekf.inl  set_filter.h
hector_pose_estimation_core/include/hector_pose_estimation/measurements/: baro.h  gps.h  gravity.h  heading.h  height.h  magnetic.h  poseupdate.h  rate.h  zerorate.h
hector_pose_estimation_core/include/hector_pose_estimation/ros/: parameters.h
hector_pose_estimation_core/include/hector_pose_estimation/system/: generic_quaternion_system_model.h  ground_vehicle_model.h  imu_input.h  imu_model.h
hector_pose_estimation_core/include/hector_pose_estimation_core/: collection.h  filter.h  global_reference.h  input.h  matrix.h  measurement.h  measurement.inl  measurement_model.h  model.h  pose_estimation.h  queue.h  state.h  substate.h  system.h  system.inl  system_model.h  system_model.inl  types.h
hector_pose_estimation_core/include/hector_pose_estimation_core/filter/: ekf.h  ekf.inl  set_filter.h
hector_pose_estimation_core/include/hector_pose_estimation_core/measurements/: baro.h  gps.h  gravity.h  heading.h  height.h  magnetic.h  poseupdate.h  rate.h  zerorate.h
hector_pose_estimation_core/include/hector_pose_estimation_core/ros/: parameters.h
hector_pose_estimation_core/include/hector_pose_estimation_core/system/: generic_quaternion_system_model.h  ground_vehicle_model.h  imu_input.h  imu_model.h
hector_pose_estimation_core/src/: CMakeLists.txt  filter.cpp  global_reference.cpp  measurement.cpp  measurement_model.cpp  parameters.cpp  pose_estimation.cpp  state.cpp  system.cpp  system_model.cpp  types.cpp
hector_pose_estimation_core/src/filter/: ekf.cpp
hector_pose_estimation_core/src/measurements/: baro.cpp  gps.cpp  gravity.cpp  heading.cpp  height.cpp  magnetic.cpp  poseupdate.cpp  rate.cpp  zerorate.cpp
hector_pose_estimation_core/src/system/: generic_quaternion_system_model.cpp  ground_vehicle_model.cpp  imu_model.cpp
hector_pose_estimation_rtt/: CMakeLists.txt  manifest.xml
hector_pose_estimation_rtt/include/hector_pose_estimation/: hector_pose_estimation_rtt.h
hector_pose_estimation_rtt/src/: CMakeLists.txt  hector_pose_estimation_rtt.cpp  hector_pose_estimation_rtt.h  services.cpp  services.h
message_to_tf/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
message_to_tf/src/: message_to_tf.cpp
odometry_to_tf/: CMakeLists.txt  mainpage.dox  manifest.xml
odometry_to_tf/src/: odom_to_tf.cpp
rtt_hector_pose_estimation/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
rtt_hector_pose_estimation/include/hector_pose_estimation/rtt/: taskcontext.h
rtt_hector_pose_estimation/src/: CMakeLists.txt  parameters.cpp  parameters.h  services.cpp  services.h  taskcontext.cpp
world_magnetic_model/: .gitignore  CHANGELOG.rst  CMakeLists.txt  Makefile  WMM.COF  WMM2010_Linux.tar.gz.md5sum  mainpage.dox  manifest.xml  package.xml
world_magnetic_model/src/WMM_Linux/: Changelog.txt  GeomagnetismHeader.h  GeomagnetismLibrary.c  WMM_README.txt  sample_coords.txt  sample_output_file.txt  wmm_file.c  wmm_grid.c  wmm_point.c
