<package>
  <name>hector_pose_estimation_core</name>
  <version>0.1.0</version>
  <description>
    hector_pose_estimation_core is the core package of the hector_localization stack. It contains the Extended Kalman Filter (EKF)
    that estimates the 6DOF pose of the robot. hector_pose_estimation can be used either as a library, as a nodelet or as a standalone node.
  </description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_pose_estimation_core</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rostime</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rostime</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rostime</test_depend> -->
  <!-- <test_depend>rosconsole</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

<export>
    <rosbuild cmake_directory="${prefix}/cmake"/>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lhector_pose_estimation" cflags="`pkg-config --cflags eigen3` -I${prefix}/include"/>
</export>

</package>
