<package>
  <name>world_magnetic_model</name>
  <version>0.1.0</version>
  <description>
    The World Magnetic Model is the standard model used by the U.S. Department of Defense, the U.K. Ministry of Defence, the North Atlantic Treaty Organization (NATO) and the International Hydrographic Organization (IHO), for navigation, attitude and heading referencing systems using the geomagnetic field. It is also used widely in civilian navigation and heading systems. The model, associated software, and documentation are distributed by NGDC on behalf of NGA. The model is produced at 5-year intervals, with the current model expiring on December 31, 2014.
  </description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license></license>

  <url type="website">http://www.ngdc.noaa.gov/geomag/WMM/DoDWMM.shtml</url>

  <author>National Geophysical Data Center (NGDC, Boulder CO, USA)</author>
  <author>British Geological Survey (BGS, Edinburgh, Scotland)</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>
